Moved the latest changes.

--- a/EmbededShell/EmbeddedbiShell/wwwroot/Samples/default/Dashboard/multitab.html
+++ b/EmbededShell/EmbeddedbiShell/wwwroot/Samples/default/Dashboard/multitab.html
@@ -76,7 +76,7 @@
             widgetSettings: {
                 showExport: false,
                 showMaximize: false,
-                showFilter: false,
+                showFilter: true,
                 showMoreOption: false
             },
             authorizationServer: {
