--- a/EmbededShell/EmbeddedbiShell/wwwroot/Samples/default/Dashboard/index.html
+++ b/EmbededShell/EmbeddedbiShell/wwwroot/Samples/default/Dashboard/index.html
@@ -55,7 +55,7 @@
                 widgetSettings: {
                     showExport: false,
                     showMaximize: false,
-                    showFilter: false,
+                    showFilter: true,
                     showMoreOption: false
                 },
                 authorizationServer: {
